--- a/index.html
+++ b/index.html
@@ -12,8 +12,23 @@
 
 <body>
     <header class="header">
+
+        <div class="contenedor">
+            <div class="barra">
+                <a class="logo" href="index.html">
+                    <h1 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__bold">DeCafé</span></h1>
+                </a>
+
+                <nav class="navegacion">
+                    <a class="navegacion__enlace centrar-texto" href="nosotros.html">Nosotros</a>
+                    <a class="navegacion__enlace centrar-texto" href="cursos.html">Cursos</a>
+                    <a class="navegacion__enlace centrar-texto" href="contacto.html">Contacto</a>
+                </nav>
+            </div>
+        </div>
+        
         <div class="header__texto">
-            <h2 class="no-margin">Blog de café con consejos y trucos</h2>
+            <h2 class="no-margin header__texto--titulo">Blog de café con consejos y cursos</h2>
             <p class="no-margin">Aprende de los expertos con las mejores recetas y consejos</p>
         </div>
     </header>
