Creamos el footers

--- a/index.html
+++ b/index.html
@@ -108,5 +108,20 @@
             </ul>
         </aside>
     </div>
+
+    <footer class="footer">
+        <div class="contenedor barra">
+            <a class="logo" href="index.html">
+                <h2 class="logo__nombre no-margin centrar-texto">Blog<span class="logo__bold">DeCafé</span></h2>
+            </a>
+
+            <nav class="navegacion">
+                <a class="navegacion__enlace centrar-texto" href="nosotros.html">Nosotros</a>
+                <a class="navegacion__enlace centrar-texto" href="cursos.html">Cursos</a>
+                <a class="navegacion__enlace centrar-texto" href="contacto.html">Contacto</a>
+            </nav>
+        </div>
+
+    </footer>
 </body>
 </html>
