Mejoramos el performance con Lazy Loading

--- a/entrada.html
+++ b/entrada.html
@@ -38,7 +38,7 @@
         
         <div class="entrada-blog">
             <div class="entrada-blog__imagen">
-                <img src="/img/blog1.jpg" alt="imagen del blog">
+                <img src="/img/blog1.jpg" alt="imagen del blog" loading="lazy">
             </div>
             <div class="entrada-blog__texto">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit molestiae facilis repudiandae libero. 
