--- a/nosotros.html
+++ b/nosotros.html
@@ -38,7 +38,7 @@
         
         <div class="sobre-nosotros">
             <div class="sobre-nosotros__imagen">
-                <img src="/img/nosotros.jpg" alt="iamgen nosotros">
+                <img src="/img/nosotros.jpg" alt="iamgen nosotros" loading="lazy">
             </div>
             <div class="sobre-nosotros__texto">
                 <p class="no-margin">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit molestiae facilis repudiandae libero. 
