Cambiamos el formate jpg por webp, añadiendo soporte de jpg

--- a/entrada.html
+++ b/entrada.html
@@ -45,7 +45,10 @@
         
         <div class="entrada-blog">
             <div class="entrada-blog__imagen">
-                <img src="/img/blog1.jpg" alt="imagen del blog" loading="lazy">
+                <picture>
+                    <source loading="lazy" srcset="/img/blog1.webp" type="image/webp">
+                    <img loading="lazy" src="/img/blog1.jpg" alt="imagen blog1">
+                </picture>
             </div>
             <div class="entrada-blog__texto">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit molestiae facilis repudiandae libero. 
