--- a/nosotros.html
+++ b/nosotros.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <link rel="Preload" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" 
-    crossorigin="crossorigin" as="fonts">
+    crossorigin="crossorigin" as="font" type="font/woff2">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
