Cambiamos el texto de Más infomracion a Más información sobre nuestros cursos

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BlogDeCafé</title>
-
+    <meta name="description" content="Página web de blog de café"> 
     <!-- Prefetch -->
     <link rel="Prefetch" href="nosotros.html" as="document">
 
@@ -112,7 +112,7 @@
                     <p class="widget-curso__label">Cupo:
                         <span class="widget-curso__infor">20</span>
                     </p>
-                    <a href="entrada.html" class="boton boton--secundario">Más Información</a>
+                    <a href="entrada.html" class="boton boton--secundario">Más Información sobre nuestros cursos</a>
                 </li>
 
                 <li class="widget-curso">
@@ -123,7 +123,7 @@
                     <p class="widget-curso__label">Cupo:
                         <span class="widget-curso__infor">20</span>
                     </p>
-                    <a href="entrada.html" class="boton boton--secundario">Más Información</a>
+                    <a href="entrada.html" class="boton boton--secundario">Más Información sobre nuestros cursos</a>
                 </li>
             </ul>
         </aside>
